--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#cv">Mon CV</a></li>
         <li><a href="#contact">Me contacter</a></li>
+        <li class="language-selector">
+          <label for="language"></label>
+          <select id="language" onchange="changeLanguage()">
+            <option value="fr">Langues</option>
+            <option value="fr">Français</option>
+            <option value="en">English</option>
+            <option value="es">Español</option>
+          </select></li>
       </ul>
     </nav>
   </header>
-
+<div id="content">
   <section id="accueil" class="container">
     <p>Bonjour et bienvenue!</p>
     <p>Je suis étudiante en master Aménagement et politiques urbaines. Je suis passionnée par la géographie sociale et sur comment l'aménagement du territoire défini les interactions humaines notamment en milieu urbain.</p>
@@ -89,7 +97,7 @@
         </li>
       </ul>
   </section>
-  
+</div>
 
   <footer>
     <p>Realised by Lisa Argento</p>
